--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,10 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Check code formatting
+      run: |
+        dotnet tool restore
+        dotnet csharpier --check .
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
